--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>Hei verden!</h1>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQMKS4H4V2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QQMKS4H4V2');
+</script>
 </body>
 </html>
