--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <h1>Hei verden!</h1>
 
+    <a href="#" class="Lenke-knapp">Klikk her</a>
+    <button id="shop">Trykk her</button>
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QQMKS4H4V2"></script>
 <script>
